--- a/app/src/main/res/layout/networks.xml
+++ b/app/src/main/res/layout/networks.xml
@@ -61,5 +61,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/enabled"
+        android:checked="false"
         android:text="Connection of Multi-group" />
+
+    <CheckBox
+        android:id="@+id/enablecontroller"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/enabled"
+        android:layout_toEndOf="@+id/enablestep2"
+        android:layout_toRightOf="@+id/enablestep2"
+        android:text="Controller" />
 </RelativeLayout>
