--- a/app/src/main/res/layout/networks.xml
+++ b/app/src/main/res/layout/networks.xml
@@ -25,7 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/enabled"
         android:layout_alignParentRight="true"
-        android:text="Off" />
+        android:text="Off"
+        android:visibility="invisible" />
 
 
     <ListView
@@ -72,4 +73,13 @@
         android:layout_toEndOf="@+id/enablestep2"
         android:layout_toRightOf="@+id/enablestep2"
         android:text="Controller" />
+
+    <CheckBox
+        android:id="@+id/enabledFile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/enablecontroller"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="113dp"
+        android:text="Send File" />
 </RelativeLayout>
