1. 將SendFile改為按鈕，且可選擇檔案送出 2. 目前Unicast方向可正常傳送，但是Multicast方向有問題，還需要找一下bug, 20180807

--- a/app/src/main/res/layout/networks.xml
+++ b/app/src/main/res/layout/networks.xml
@@ -74,13 +74,12 @@
         android:layout_toRightOf="@+id/enablestep2"
         android:text="Controller" />
 
-    <CheckBox
-        android:id="@+id/enabledFile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/serval_status"
-        android:layout_alignBottom="@+id/serval_status"
+    <Button
+        android:id="@+id/SendFileBtn"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:layout_alignTop="@+id/enabled"
         android:layout_toEndOf="@+id/enablestep2"
-        android:layout_toRightOf="@+id/enablestep2"
         android:text="Send File" />
+
 </RelativeLayout>
